Modified header to have a fixed size so that going to another page won't mess up the position of the heading since the nav collapses when you are scrolled down and on desktop with the onhover

--- a/src/components/Header/index.sass
+++ b/src/components/Header/index.sass
@@ -10,7 +10,7 @@
   transition: all 100ms ease-in-out
 
 .headroom
-  :height 200px
+  :height 8rem
 
 .headroom--scrolled
   transition: transform 200ms ease-in-out
@@ -32,7 +32,7 @@
 .headroom--unpinned .navItem
   opacity: 0
   position: absolute
-  top: -100px
+  top: -300px
 
 .navItem
   padding: 0px 30px
@@ -43,13 +43,5 @@
 /*** TODO: Edit this ***/
 .headroom--scrolled:hover .navItem
   opacity: 1
-  height: 50px
   transform: translateY(0%)
-//   opacity: 0
-//   height: 0
-//
-// .headroom:hover .navItem
-//   position: relative
-//   visibility: visible
-//   height: 50px
-//   opacity: 1
+  height: 50px
